<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearLaporan"
        android:layout_height="match_parent"
        android:layout_width="match_parent" android:orientation="vertical">
        <LinearLayout android:id="@+id/linearLighttheme"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_126pxh"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_50cornerRadius">
            <LinearLayout android:id="@+id/linearRowsipusseven"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_9pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_6pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageSIPUSSeven"
                    android:layout_height="@dimen/_100pxh"
                    android:layout_width="@dimen/_96pxh"
                    android:scaleType="fitXY"
                    imageRes="@{@drawable/img_sipus6}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_sipus6"/>
                <ImageButton
                    android:background="@drawable/rectangle_bg_teal_300_radius_18"
                    android:id="@+id/btnArrowright"
                    android:layout_height="@dimen/_36pxh"
                    android:layout_marginBottom="@dimen/_28pxv"
                    android:layout_marginStart="@dimen/_159pxh"
                    android:layout_marginTop="@dimen/_36pxv"
                    android:layout_width="@dimen/_36pxh"
                    android:paddingHorizontal="@dimen/_12pxh"
                    android:paddingVertical="@dimen/_12pxv"
                    android:scaleType="fitCenter"
                    android:src="@drawable/img_arrowright" tools:ignore="ContentDescription"/>
            </LinearLayout>
            <androidx.appcompat.widget.SearchView
                android:background="@drawable/rectangle_bg_blue_50_radius_10"
                android:gravity="start"
                android:id="@+id/searchViewPencarian"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_12pxh"
                android:layout_marginStart="@dimen/_12pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="match_parent"
                android:theme="@style/searchViewPencarian"
                app:iconifiedByDefault="false"
                app:queryBackground="@android:color/transparent"
                app:queryHint="@string/lbl_pencarian" app:searchIcon="@drawable/img_search"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearItems"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_marginTop="@dimen/_46pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageHome"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="@dimen/_18pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_home_20x18"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_home_20x18"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtItem"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_19pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_weight="0.8"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_beranda"
                    style="@style/txtPoppinssemibold16" tools:text="@string/lbl_beranda"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearItems1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_marginTop="@dimen/_37pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageMail"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginStart="@dimen/_3pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="@dimen/_18pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_mail"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_mail"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtItemOne"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_19pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_weight="0.83"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_dashboard"
                    style="@style/txtPoppinssemibold16" tools:text="@string/lbl_dashboard"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearItems2"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_marginTop="@dimen/_37pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageFile"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_4pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="@dimen/_16pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_file"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_file"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtItemTwo"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_weight="0.91"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@string/msg_struktur_organi"
                    style="@style/txtPoppinssemibold16" tools:text="@string/msg_struktur_organi"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearItems3"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_28pxh"
                android:layout_marginStart="@dimen/_28pxh"
                android:layout_marginTop="@dimen/_408pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageQuestion"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_2pxv"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_question"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_question"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtItemThree"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_4pxv"
                    android:layout_weight="0.78"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_bantuan"
                    style="@style/txtPoppinssemibold16" tools:text="@string/lbl_bantuan"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearProfile"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_24pxv"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_46pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtAvatar"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.29"
                    android:layout_width="0dp"
                    android:lineSpacingExtra="@dimen/_1pxh"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_12pxh"
                    android:paddingStart="@dimen/_13pxh"
                    android:paddingTop="@dimen/_16pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_rd"
                    style="@style/txtSolidRounded" tools:text="@string/lbl_rd"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearProfile1"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_4pxv"
                    android:layout_marginStart="@dimen/_16pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.6"
                    android:layout_width="0dp" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtJulietaValle"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="wrap_content"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@string/lbl_radit"
                        style="@style/txtPoppinsmedium16" tools:text="@string/lbl_radit"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtEmail"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_11pxv"
                        android:layout_width="match_parent"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@string/lbl_radit_gmail_com"
                        style="@style/txtPoppinsregular11" tools:text="@string/lbl_radit_gmail_com"/>
                </LinearLayout>
                <ImageView android:id="@+id/imageShare"
                    android:layout_height="@dimen/_18pxh"
                    android:layout_marginBottom="@dimen/_15pxv"
                    android:layout_marginEnd="@dimen/_3pxh"
                    android:layout_marginStart="@dimen/_19pxh"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="@dimen/_18pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_share"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_share"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
