<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <FrameLayout android:id="@+id/frameStackgroupseventynine"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" style="@style/groupStyle">
        <ImageView android:id="@+id/imageGroupSeventyNine"
            android:layout_gravity="start"
            android:layout_height="@dimen/_487pxh"
            android:layout_width="@dimen/_428pxh"
            android:scaleType="fitXY"
            android:src="@drawable/img_group79"
            tools:ignore="ContentDescription" tools:src="@drawable/img_group79"/>
        <LinearLayout android:id="@+id/linearColumnrectangletwo"
            android:layout_gravity="top|center"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_31pxv"
            android:layout_marginEnd="@dimen/_26pxh"
            android:layout_marginStart="@dimen/_26pxh"
            android:layout_marginTop="@dimen/_31pxv"
            android:layout_width="match_parent" android:orientation="vertical">
            <LinearLayout android:id="@+id/linearRowrectangletwo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_9pxh"
                android:layout_width="match_parent" android:orientation="horizontal">
                <ImageView android:id="@+id/imageRectangleTwo"
                    android:layout_height="@dimen/_43pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_width="@dimen/_46pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_rectangle2_43x46"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle2_43x46"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearColumnradit"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_weight="0.68"
                    android:layout_width="0dp" android:orientation="vertical">
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtRadit"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_width="wrap_content"
                        android:letterSpacing="0.01"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@string/lbl_radit"
                        style="@style/txtPoppinssemibold16_1" tools:text="@string/lbl_radit"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txt2Januari2023"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/_10pxh"
                        android:layout_marginTop="@dimen/_7pxv"
                        android:layout_width="wrap_content"
                        android:letterSpacing="0.02"
                        android:lineSpacingExtra="@dimen/_1pxh"
                        android:singleLine="true"
                        android:text="@string/lbl_2_januari_2023"
                        style="@style/txtRobotoregular12" tools:text="@string/lbl_2_januari_2023"/>
                </LinearLayout>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnDiterima"
                    android:layout_height="@dimen/_22pxv"
                    android:layout_marginStart="@dimen/_9pxh"
                    android:layout_marginTop="@dimen/_21pxv"
                    android:layout_width="@dimen/_66pxh"
                    android:paddingBottom="@dimen/_4pxv"
                    android:paddingEnd="@dimen/_10pxh"
                    android:paddingStart="@dimen/_10pxh"
                    android:paddingTop="@dimen/_4pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_diterima"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_diterima"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnbanjirdidaera"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylecornerRadius_1">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtBanjirdidaera"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.01"
                    android:singleLine="true"
                    android:text="@string/msg_banjir_di_daera"
                    style="@style/txtRobotoregular14" tools:text="@string/msg_banjir_di_daera"/>
                <ImageView android:id="@+id/imageImageThirteen"
                    android:layout_height="@dimen/_198pxh"
                    android:layout_marginTop="@dimen/_45pxv"
                    android:layout_width="@dimen/_375pxh"
                    android:scaleType="fitXY"
                    cornerRadius="@{@dimen/_8pxh}"
                    imageRes="@{@drawable/img_image13}"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_image13"/>
            </LinearLayout>
            <ImageView android:id="@+id/imageFavorite"
                android:layout_height="@dimen/_18pxh"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_1pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="@dimen/_20pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_favorite"
                tools:ignore="ContentDescription" tools:src="@drawable/img_favorite"/>
        </LinearLayout>
    </FrameLayout>
</layout>
